sys/systm.h: include sys/limits.h for SSIZE_MAX

PR:	296489

(cherry picked from commit bcb471cfb499f61d98abdc7bfd48bee0e229b02b)